Fixed go-top button z-index

--- a/src/main.scss
+++ b/src/main.scss
@@ -33,6 +33,7 @@ h1 {
   filter: drop-shadow(0 0px 5px rgba(0, 0, 0, 0.5));
   transform: translate(-40px, 0);
   transition-duration: 0.5s;
+  z-index: 5;
 
   &:hover {
     background-color: #e8c300;
